; ModuleID = '/home/carl/AnghaBench/libsodium/src/libsodium/crypto_onetimeauth/poly1305/extr_onetimeauth_poly1305.c_crypto_onetimeauth_poly1305_update.c'
source_filename = "/home/carl/AnghaBench/libsodium/src/libsodium/crypto_onetimeauth/poly1305/extr_onetimeauth_poly1305.c_crypto_onetimeauth_poly1305_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 (i32*, i8*, i64)* }

@implementation = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @crypto_onetimeauth_poly1305_update(i32* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** @implementation, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i32 (i32*, i8*, i64)*, i32 (i32*, i8*, i64)** %8, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = load i64, i64* %6, align 8
  %13 = call i32 %9(i32* %10, i8* %11, i64 %12)
  ret i32 %13
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
